# Vala-GTK-Todo-App

./: README.md  meson.build
src/: app.vala  constants.vala  main.vala
src/models/: task.vala
src/providers/: tasks-provider.vala
src/widgets/: about-window.vala  app-window.vala  bottom-bar.vala  header.vala  task-row.vala  tasks-view.vala
